<resources>
    <string name="app_name">SocialApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Screen Login  -->
    <string name="login_title_login">Login</string>
    <string name="login_title_signup">SignUp</string>
    <string name="login_edittext_user">Username</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_enter">Login</string>

    <!-- Screen SignUp  -->
    <string name="signup_edittext_name">Name</string>
    <string name="signup_edittext_lastname">Lastname</string>
    <string name="signup_edittext_email">Email</string>
    <string name="signup_edittext_password">Password</string>
    <string name="signup_edittext_rpassword">Repeat password</string>
    <string name="signup_button_register">Register</string>

    <!-- Screen Feed -->
    <string name="feed_title">Feed</string>
    <string name="feed_number">0</string>
    <string name="feed_offline">Estás navegando sin conexión a internet</string>

    <!-- Screen Followers -->
    <string name="followers_title">Followers</string>
    <string name="followers_following">Following</string>
    <string name="followers_follow">Follow</string>

    <!-- Permissions -->
    <string name="permissions_storage">AppSocial necesita permisos para funcionar</string>

</resources>
