<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewSignUp"
            type="pe.area51.socialapp.screens.login.viewmodel.SignUpFragViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/txtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_edittext_name"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/txtlastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_edittext_lastname"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_edittext_email"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/txtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_edittext_password"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edittext_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/txtpassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_edittext_rpassword"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_button_background"
                android:inputType="textCapSentences"
                android:text="@string/signup_button_register"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>


</layout>
